[gd_scene load_steps=3 format=3 uid="uid://drt2pi2pkva74"]

[ext_resource type="Script" path="res://addons/extra_export_hints/comp/large_enum_picker.gd" id="1_ab8at"]
[ext_resource type="Texture2D" uid="uid://c6oi0yn0gexsh" path="res://addons/extra_export_hints/comp/icon_search.png" id="3_v2vmo"]

[node name="large_enum_picker" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ab8at")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Pick"
flat = true
text_overrun_behavior = 3

[node name="Window" type="AcceptDialog" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="Window"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2

[node name="search_bar" type="LineEdit" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search..."
right_icon = ExtResource("3_v2vmo")

[node name="ItemList" type="ItemList" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="confirmed" from="Window" to="." method="_on_window_confirmed"]
[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/search_bar" to="." method="_on_search_bar_text_changed"]
[connection signal="text_submitted" from="Window/MarginContainer/VBoxContainer/search_bar" to="." method="_on_search_bar_text_submitted"]
[connection signal="item_activated" from="Window/MarginContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
